--- a/templates/macros/footer.html
+++ b/templates/macros/footer.html
@@ -17,6 +17,7 @@
         <a href="{{ get_url(path='@/programm.md', lang=lang) }}">{{ trans(key="nav_programm", lang=lang) }}</a>
         <a href="{{ get_url(path='@/manifest.md', lang=lang) }}">{{ trans(key="nav_manifest", lang=lang) }}</a>
         <a href="{{ get_url(path='@/kein-links-rechts.md', lang=lang) }}">{{ trans(key="nav_kein_links_rechts", lang=lang) }}</a>
+        <a href="{{ get_url(path='@/zukunftslabor/_index.md', lang=lang) }}">{{ trans(key="nav_zukunftslabor", lang=lang) }}</a>
       </div>
 
       <div class="footer__col">
