--- a/templates/macros/nav.html
+++ b/templates/macros/nav.html
@@ -82,6 +82,7 @@
         <a class="command-overlay__link" href="{{ get_url(path='@/sprache-verstaendigung.md', lang=lang) }}">{{ trans(key="nav_sprache_verstaendigung", lang=lang) }}</a>
         <a class="command-overlay__link" href="{{ get_url(path='@/menschen.md', lang=lang) }}">{{ trans(key="nav_menschen", lang=lang) }}</a>
         <a class="command-overlay__link" href="{{ get_url(path='@/mitmachen.md', lang=lang) }}">{{ trans(key="nav_mitmachen", lang=lang) }}</a>
+        <a class="command-overlay__link" href="{{ get_url(path='@/zukunftslabor/_index.md', lang=lang) }}">{{ trans(key="nav_zukunftslabor", lang=lang) }}</a>
         <a class="command-overlay__link" href="{{ get_url(path='@/kontakt.md', lang=lang) }}">{{ trans(key="nav_kontakt", lang=lang) }}</a>
         <a class="command-overlay__link" href="{{ get_url(path='@/info.md', lang=lang) }}">{{ trans(key="nav_info", lang=lang) }}</a>
       </nav>
