--- a/templates/base.html
+++ b/templates/base.html
@@ -798,5 +798,6 @@
     navigator.serviceWorker.register('/sw.js');
   }
   </script>
+  {% block body_end %}{% endblock body_end %}
 </body>
 </html>
